# pwk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pwk.py  setup.cfg  test.py
.github/workflows/: publish.yaml  test.yaml
test_files/: aggregate.csv  aggregate_output.csv  filter.csv  filter_output.csv  header.csv  header_output.csv  import.csv  import_output.csv  iterable_output.csv  regex.txt  regex_output.csv  test.csv  test.tsv  test_output.csv  test_output.plain  test_output.tsv
