[metadata]
name = pwk
version = 0.1.0
description = A simple tool for manipulating tabular data using Python expressions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saeub/pwk
project_urls =
    Bug Tracker = https://github.com/saeub/pwk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules =
    pwk

[options.entry_points]
console_scripts =
    pwk = pwk:main
